src/lexer/snapshots/python_parser__lexer__tests__lex_newline_in_brackets_windows_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "x" Id 0..1,
    "=" Operator(Assign) 2..3,
    "[" OpenBracket 4..5,
    "\r\n" NonLogicalNewline 5..7,
    "\r\n" NonLogicalNewline 7..9,
    "1" Number(Decimal) 17..18,
    "," Comma 18..19,
    "2" Number(Decimal) 19..20,
    "\r\n" NonLogicalNewline 20..22,
    "," Comma 26..27,
    "(" OpenParenthesis 27..28,
    "3" Number(Decimal) 28..29,
    "," Comma 29..30,
    "\r\n" NonLogicalNewline 30..32,
    "4" Number(Decimal) 36..37,
    "," Comma 37..38,
    "\r\n" NonLogicalNewline 38..40,
    ")" CloseParenthesis 44..45,
    "," Comma 45..46,
    "{" OpenBrace 47..48,
    "\r\n" NonLogicalNewline 48..50,
    "5" Number(Decimal) 54..55,
    "," Comma 55..56,
    "\r\n" NonLogicalNewline 56..58,
    "6" Number(Decimal) 62..63,
    "," Comma 63..64,
    "7" Number(Decimal) 71..72,
    "}" CloseBrace 72..73,
    "]" CloseBracket 73..74,
    "\r\n" NewLine 74..76,
]
