src/lexer/snapshots/python_parser__lexer__tests__lex_non_logical_newline_in_string_continuation.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "(" OpenParenthesis 0..1,
    "\n" NonLogicalNewline 1..2,
    "'a'" String { kind: String, is_triple_quote: false } 10..13,
    "\n" NonLogicalNewline 13..14,
    "'b'" String { kind: String, is_triple_quote: false } 22..25,
    "\n" NonLogicalNewline 25..26,
    "\n" NonLogicalNewline 26..27,
    "'c'" String { kind: String, is_triple_quote: false } 35..38,
    "'d'" String { kind: String, is_triple_quote: false } 49..52,
    "\n" NonLogicalNewline 52..53,
    ")" CloseParenthesis 57..58,
    "" NewLine 58..58,
]
