src/lexer/snapshots/python_parser__lexer__tests__lex_operators.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "//" Operator(DoubleSlash) 0..2,
    "//" Operator(DoubleSlash) 2..4,
    "//=" Operator(FloorDivisionEqual) 4..7,
    "/" Operator(Slash) 7..8,
    "/" Operator(Slash) 9..10,
    "" NewLine 10..10,
]
