src/lexer/snapshots/python_parser__lexer__tests__lex_string.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"double\"" String { kind: String, is_triple_quote: false } 0..8,
    "'single'" String { kind: String, is_triple_quote: false } 9..17,
    "'can\\'t'" String { kind: String, is_triple_quote: false } 18..26,
    "\"\\\\\\\"\"" String { kind: String, is_triple_quote: false } 27..33,
    "'\\t\\r\\n'" String { kind: String, is_triple_quote: false } 34..42,
    "'\\g'" String { kind: String, is_triple_quote: false } 43..47,
    "r'raw\\''" String { kind: RawString, is_triple_quote: false } 48..56,
    "'\\420'" String { kind: String, is_triple_quote: false } 57..63,
    "'\\200\\0a'" String { kind: String, is_triple_quote: false } 64..73,
    "" NewLine 73..73,
]
