src/lexer/snapshots/python_parser__lexer__tests__lex_string_continuation_mac_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"abc\\\rdef\"" String { kind: String, is_triple_quote: false } 0..10,
    "" NewLine 10..10,
]
