src/lexer/snapshots/python_parser__lexer__tests__lex_string_continuation_unix_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"abc\\\ndef\"" String { kind: String, is_triple_quote: false } 0..10,
    "" NewLine 10..10,
]
