src/lexer/snapshots/python_parser__lexer__tests__lex_string_continuation_windows_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"abc\\\r\ndef\"" String { kind: String, is_triple_quote: false } 0..11,
    "" NewLine 11..11,
]
