src/lexer/snapshots/python_parser__lexer__tests__lex_triple_quoted_macos_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"\"\"\r test string\r \"\"\"" String { kind: String, is_triple_quote: true } 0..21,
    "" NewLine 21..21,
]
