src/lexer/snapshots/python_parser__lexer__tests__lex_triple_quoted_windows_eol.snap
---
source: src/lexer/mod.rs
expression: lexer.debug()
---
[
    "\"\"\"\r\n test string\r\n \"\"\"" String { kind: String, is_triple_quote: true } 0..23,
    "" NewLine 23..23,
]
